--- a/maple-bytes-wx/pom.xml
+++ b/maple-bytes-wx/pom.xml
@@ -71,6 +71,11 @@
             <artifactId>commons-pool2</artifactId>
             <version>2.9.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.11</version>
+        </dependency>
 
     </dependencies>
 
